# mllam-exps-ShCu

./: .gitignore  README.md  dvc.yaml  pyproject.toml  train_wrapper.py  version.mllam.txt  versions.yaml
.dvc/: config
data/: config.yaml  datastore.yaml  evaluate_params.yaml  training_params.yaml
machines/: environment.sh  slurm.train.sh
src/: grid_viz.ipynb  preprocess.py  subdomains.py
