[project]
name = "mllam-exps-shcu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cartopy>=0.24.1",
    "dvc>=3.59.1",
    "healpy>=1.18.0",
    "intake>=2.0.8",
    "intake-xarray>=2.0.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "mllam-data-prep>=0.5.0",
    "numpy<=2.1",
    "uxarray>=2025.2.1",
    "xarray>=2025.1.2",
    "zarr<3",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
]

[tool.uv.sources]
mllam-data-prep = { git = "ssh://git@github.com/mllam/mllam-data-prep.git" }
